@@ -194,24 +194,25 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
     List<String> colNames = Lists.newArrayList(colName.toLowerCase());
 
     if (part == null) {
-      if (table.isPartitioned() && StatsUtils.checkCanProvidePartitionStats(table)) {
+      if (table.isPartitioned() && StatsUtils.checkCanProvideColumnStats(table)) {
         Map<String, String> tableProps = table.getParameters() == null ?
             new HashMap<>() : table.getParameters();
-        if (table.isPartitionKey(colNames.get(0))) {
+        if (table.isPartitionKey(colNames.getFirst())) {
           getColumnDataForPartitionKeyColumn(table, cols, colStats, colNames, tableProps);
         } else {
-          getColumnsForNotPartitionKeyColumn(table, cols, colStats, deserializer, colNames, tableProps);
+          getColumnsForNotPartitionKeyColumn(table, cols, colStats, deserializer, colName,
+              tableProps);
         }
         table.setParameters(tableProps);
       } else {
-        cols.addAll(Hive.getFieldsFromDeserializer(desc.getColumnPath(), deserializer, context.getConf()));
+        cols.addAll(getFilteredFieldsFromDeserializer(table, deserializer, colName));
         colStats.addAll(context.getDb().getTableColumnStatistics(table, colNames, false));
       }
     } else {
       List<String> partitions = new ArrayList<>();
       String partName = part.getName();
       partitions.add(partName);
-      cols.addAll(Hive.getFieldsFromDeserializer(desc.getColumnPath(), deserializer, context.getConf()));
+      cols.addAll(getFilteredFieldsFromDeserializer(table, deserializer, colName));
       Map<String, List<ColumnStatisticsObj>> partitionColumnStatistics = context.getDb().getPartitionColumnStatistics(
           table.getDbName(), table.getTableName(), partitions, colNames, false);
       List<ColumnStatisticsObj> partitionColStat = partitionColumnStatistics.get(partName);
@@ -221,10 +222,27 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
     }
   }
 
+  private List<FieldSchema> getFilteredFieldsFromDeserializer(Table table, Deserializer deserializer,
+      String targetColName) throws HiveException {
+    List<FieldSchema> allFields = Hive.getFieldsFromDeserializer(table.getTableName(), deserializer, context.getConf());
+    List<FieldSchema> filteredFields = new ArrayList<>();
+    
+    for (FieldSchema field : allFields) {
+      if (field.getName() != null && targetColName.equalsIgnoreCase(field.getName())) {
+        // The ObjectInspector normalizes column names to lowercase.
+        // To ensure the column name casing is same as in query, setting it back.
+        field.setName(targetColName);
+        filteredFields.add(field);
+      }
+    }
+    
+    return filteredFields;
+  }
+
   private void getColumnDataForPartitionKeyColumn(Table table, List<FieldSchema> cols,
       List<ColumnStatisticsObj> colStats, List<String> colNames, Map<String, String> tableProps)
       throws HiveException, MetaException {
-    FieldSchema partCol = table.getPartColByName(colNames.get(0));
+    FieldSchema partCol = table.getPartColByName(colNames.getFirst());
     cols.add(partCol);
     PartitionIterable parts = new PartitionIterable(context.getDb(), table, null,
         MetastoreConf.getIntVar(context.getConf(), MetastoreConf.ConfVars.BATCH_RETRIEVE_MAX));
@@ -239,18 +257,18 @@ public class DescTableOperation extends DDLOperation<DescTableDesc> {
   }
 
   private void getColumnsForNotPartitionKeyColumn(Table table, List<FieldSchema> cols, List<ColumnStatisticsObj> colStats,
-      Deserializer deserializer, List<String> colNames, Map<String, String> tableProps)
+      Deserializer deserializer, String colName, Map<String, String> tableProps)
       throws HiveException {
-    cols.addAll(Hive.getFieldsFromDeserializer(desc.getColumnPath(), deserializer, context.getConf()));
+    cols.addAll(getFilteredFieldsFromDeserializer(table, deserializer, colName));
     List<String> parts = context.getDb().getPartitionNames(table, (short) -1);
-    
-    AggrStats aggrStats = context.getDb().getAggrColStatsFor(table, colNames, parts, false);
+    AggrStats aggrStats = context.getDb().getAggrColStatsFor(table, Lists.newArrayList(colName.toLowerCase()),
+        parts, false);
     colStats.addAll(aggrStats.getColStats());
     
     if (parts.size() == aggrStats.getPartsFound()) {
-      StatsSetupConst.setColumnStatsState(tableProps, colNames);
+      StatsSetupConst.setColumnStatsState(tableProps, Lists.newArrayList(colName.toLowerCase()));
     } else {
-      StatsSetupConst.removeColumnStatsState(tableProps, colNames);
+      StatsSetupConst.removeColumnStatsState(tableProps, Lists.newArrayList(colName.toLowerCase()));
     }
   }
 
